jenkins/aws-ec2-vpc/networking/modules/public_route_table.tf
/*** Setup connection between the VPC and the public internet, allowing traffic to flow in and out of the VPC and translating IP addresses to public* addresses. */
resource "aws_internet_gateway" "igw" { 
	vpc_id = var.vpc_id 
    
    tags = { 
    	Name = var.inet_gw
   } 
} 

/*** Route from the public route table to the internet through internet gateway. */
resource "aws_route_table" "public_rt" { 
	vpc_id = var.vpc_id 
    
    route { 
    	cidr_block = "0.0.0.0/0" 
        gateway_id = aws_internet_gateway.igw.id
   } 
   
   tags = { 
   		Name = var.tagging_name-public_route_table
   } 
} 

/*** Associate the public route table with the public subnets.*/ 
resource "aws_route_table_association" "public" { 
	count     = var.public_subnets_count 
    subnet_id = element(var.public_subnets.*.id, count.index) 
    route_table_id = aws_route_table.public_rt.id 
}
